--- a/1. fundamentals.ipynb
+++ b/1. fundamentals.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e4ebf63d",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "aa3f3940",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "12c2b66d",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "08752da8-097b-428f-ab10-176434960c96",
    "metadata": {
     "tags": []
@@ -138,8 +138,10 @@
     "    The world object is responsible of spawning actors and keeping track of these. \n",
     "    Spawning only requires a blueprint, and a carla.Transform stating a location and rotation for the actor.\n",
     "\n",
-    "### spawn_actor(self, blueprint, transform, attach_to=None, attachment=Rigid) : \n",
-    "    shows some sensors being attached to a car when spawned\n",
+    "# spawn_actor(self, blueprint, transform, attach_to=None, attachment=Rigid) : \n",
+    "    shows some sensors being attached to a car when spawned.\n",
+    "    \n",
+    "    Spawns an actor into the world based on the blueprint provided and the transform.\n",
     "\n",
     "    spawn_actor() raises an exception if the spawning fails.\n",
     "    try_spawn_actor() returns None if the spawning fails."
@@ -155,12 +157,15 @@
     "    \n",
     "    Returns a list of recommendations made by the creators of the map to be used as spawning points for the vehicles. \n",
     "    \n",
-    "    The list includes carla.Transform objects with certain location and orientation. "
+    "    The list includes carla.Transform objects with certain location and orientation. \n",
+    "    \n",
+    "# get_spawn_points\n",
+    "    Returns a list of recommendations made by the creators of the map to be used as spawning points for the vehicles. The list includes carla.Transform objects with certain location and orientation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "66541675-a91a-4cd0-b979-14bcb01a117d",
    "metadata": {
     "tags": []
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d816901b-f454-413b-ac6f-02ca484a8c51",
    "metadata": {
     "tags": []
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6624880b-f1f9-44c5-a9e5-d3eec5988140",
    "metadata": {
     "tags": []
@@ -214,17 +219,22 @@
     "    \n",
     "    in_point(carla.Location) : Location in the space to which the transformation will be applied.\n",
     "    \n",
-    "# spectator \n",
-    "    is a view into the simulation.\n",
-    "    You can fly the spectator around the world using the mouse to control the pitch\n",
+    "# spectator\n",
+    "     An in-game point of view. It can be used to move the view of the simulator window. \n",
+    "    \n",
+    "# get_spectator(self) \n",
+    "    Returns the spectator actor. The spectator is a special type of actor created by Unreal Engine, usually with ID=0, that acts as a camera and controls the view in the simulator window.\n",
     "    \n",
     "# set_transform(self, transform)\n",
-    "    Teleports the actor to a given transform (location and rotation)."
+    "    Teleports the actor to a given transform (location and rotation).\n",
+    "    \n",
+    "# get_transform(self)\n",
+    "    Returns the actor's transform (location and rotation) the client recieved during last tick."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "44e45ddd-54e8-4192-b11e-38e5c880aba6",
    "metadata": {
     "tags": []
@@ -238,12 +248,13 @@
     "# it will move the spectator to see right behind the vehicle that I just spawned so that I can see it \n",
     "\n",
     "transform=carla.Transform(vehicle.get_transform().transform(carla.Location(x=-4, z=2.5)), vehicle.get_transform().rotation)\n",
-    "spectator.set_transform(transform)"
+    "spectator.set_transform(transform)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "118b72b0-0fb3-47dc-b6c8-d2bc1cb1aadb",
    "metadata": {
     "tags": []
@@ -276,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b34bcfeb-7f1a-47c0-806e-31ceb26cdcc8",
    "metadata": {
     "tags": []
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8c9c9a71-ad7d-4350-91ec-843109a776cd",
    "metadata": {
     "tags": []
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "6722aa9d-3fb5-42b6-93ff-58f2bebd2bf6",
    "metadata": {},
    "outputs": [],
@@ -328,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "85f177fa-8523-4c36-b075-9188fa71ffe7",
    "metadata": {
     "tags": []
@@ -341,30 +352,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "1fe0a55d-35a4-4ad3-9067-06828e495090",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:/Users/USER/workspace/carla/carla/Unreal/CarlaUE4/Saved/recording01.log'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# client.start_recorder(\"recording01.log\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "a8d4a882-cd67-460e-9f54-40040de8d5b4",
    "metadata": {
     "tags": []
@@ -376,59 +376,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "bfd5325d-c07e-4c12-992c-34409fc388aa",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "ArgumentError",
-     "evalue": "Python argument types in\n    Client.show_recorder_file_info(Client, str)\ndid not match C++ signature:\n    show_recorder_file_info(class carla::client::Client {lvalue}, class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > name, bool show_all)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mArgumentError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_28304\\2377910324.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mclient\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow_recorder_file_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"recording01.log\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mArgumentError\u001b[0m: Python argument types in\n    Client.show_recorder_file_info(Client, str)\ndid not match C++ signature:\n    show_recorder_file_info(class carla::client::Client {lvalue}, class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > name, bool show_all)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# client.show_recorder_file_info(\"recording01.log\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "a2f5095f-6346-4b89-ab22-bb3f81eb1723",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "ArgumentError",
-     "evalue": "Python argument types in\n    Client.replay_file(Client, str)\ndid not match C++ signature:\n    replay_file(class carla::client::Client {lvalue}, class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > name, double time_start, double duration, unsigned int follow_id, bool replay_sensors=False)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mArgumentError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_28304\\2136866991.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mclient\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplay_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"/carla/Unreal/CarlaUE4/Saved/recording01.log\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mArgumentError\u001b[0m: Python argument types in\n    Client.replay_file(Client, str)\ndid not match C++ signature:\n    replay_file(class carla::client::Client {lvalue}, class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > name, double time_start, double duration, unsigned int follow_id, bool replay_sensors=False)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# client.replay_file(\"./carla/Unreal/CarlaUE4/Saved/recording01.log\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4c4a9c41-16ca-4550-bba8-ebdce85898e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for actor in world.get_actors().filter('*vehicle*'):\n",
+    "    actor.destroy()"
+   ]
   }
  ],
  "metadata": {
