--- a/2. positioning.ipynb
+++ b/2. positioning.ipynb
@@ -27,25 +27,22 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "time-out of 5000ms while waiting for the simulator, make sure the simulator is ready and connected to localhost:2000",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6804\\280271534.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mclient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcarla\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mClient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'localhost'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mworld\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclient\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_world\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mspawn_points\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_map\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_spawn_points\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: time-out of 5000ms while waiting for the simulator, make sure the simulator is ready and connected to localhost:2000"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client=carla.Client('localhost',2000)\n",
     "\n",
     "world=client.get_world()\n",
     "spawn_points=world.get_map().get_spawn_points()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "86b75ae9-b944-4463-809f-76e967470044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vehicle_bp=world.get_blueprint_library().filter('*firetruck*')\n",
     "start_point=spawn_points[0]\n",
     "vehicle=world.try_spawn_actor(vehicle_bp[0], start_point)"
@@ -53,12 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3fe154c6-03a4-442f-bb6c-29298794d110",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transform(Location(x=106.418465, y=-12.711902, z=-0.001324), Rotation(pitch=-0.000615, yaw=-89.609215, roll=-0.009644))\n"
+     ]
+    }
+   ],
    "source": [
     "# get car's position on the map\n",
     "\n",
@@ -68,12 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cdb866bd-b4af-4446-8f7b-7bf9e16c66be",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transform(Location(x=106.416290, y=-12.711931, z=0.599999), Rotation(pitch=0.000000, yaw=-89.609253, roll=0.000000))\n"
+     ]
+    }
+   ],
    "source": [
     "#initial spawn point is the same - just a little bit higher off the ground\n",
     "print(start_point)"
@@ -81,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f7c9081e-c0bd-48c9-9905-2ea34a0d84f6",
    "metadata": {
     "tags": []
@@ -95,12 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f86cf203-f6b0-4b3c-a93e-7dee06eab427",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transform(Location(x=106.419762, y=-13.042729, z=-0.005207), Rotation(pitch=0.103764, yaw=-89.621635, roll=0.002015))\n"
+     ]
+    }
+   ],
    "source": [
     "# get actual position from the car moving\n",
     "\n",
@@ -110,12 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f1258848-fce0-4938-a7a2-4b0ff767e56f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'carla.libcarla.Map'>\n",
+      "Map(name=Carla/Maps/Town10HD_Opt)\n"
+     ]
+    }
+   ],
    "source": [
     "# look at the map\n",
     "\n",
@@ -136,12 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e9ffe304-feb1-423d-b8d0-18872afd4d0c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(<carla.libcarla.Waypoint object at 0x0000017F221AA1B0>, <carla.libcarla.Waypoint object at 0x0000017F221AA150>), (<carla.libcarla.Waypoint object at 0x0000017F221AA270>, <carla.libcarla.Waypoint object at 0x0000017F221AA210>), (<carla.libcarla.Waypoint object at 0x0000017F221AA2D0>, <carla.libcarla.Waypoint object at 0x0000017F221AA330>)]\n"
+     ]
+    }
+   ],
    "source": [
     "roads=town_map.get_topology()\n",
     "print(roads[0:3])"
@@ -161,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0d622cfb-feb1-4d10-bf4a-c95d152e6b6b",
    "metadata": {
     "tags": []
@@ -187,12 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5a198d55-6791-4464-b869-be7e53f805c4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<carla.libcarla.Waypoint object at 0x0000017F421A93F0>, <RoadOption.LANEFOLLOW: 4>)\n",
+      "(<carla.libcarla.Waypoint object at 0x0000017F421A96F0>, <RoadOption.LANEFOLLOW: 4>)\n"
+     ]
+    }
+   ],
    "source": [
     "# using the code to plan the route and then draw it in the simulator\n",
     "\n",
@@ -210,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e4faf60d-75ce-496c-8adb-67cf570198be",
    "metadata": {
     "tags": []
@@ -223,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d57f1f27-f85a-4c6d-a8db-20fa042a1bad",
    "metadata": {
     "tags": []
@@ -241,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a94a668b-4e4a-4286-bec7-45f56d3c368e",
    "metadata": {
     "tags": []
@@ -269,12 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1faacaf0-4c27-4159-a247-f55760a300db",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actor(id=25, type=vehicle.carlamotors.firetruck)\n"
+     ]
+    }
+   ],
    "source": [
     "# start first car in the already defined start point\n",
     "\n",
@@ -284,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d69836a2-e72c-44a7-8fbb-ea0fa4819cfd",
    "metadata": {
     "tags": []
@@ -305,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e06ed0f2-3020-48ef-92c8-80b412653af8",
    "metadata": {
     "tags": []
@@ -316,19 +371,11 @@
     "\n",
     "mini=world.try_spawn_actor(mini_bp[0], spawn_points[10])\n",
     "\n",
-    "mini_pos=carla.Transform(start_point.location+carla.Location(x=-4,z=10),\n",
+    "mini_pos=carla.Transform(start_point.location+carla.Location(x=0,z=10),\n",
     "                             carla.Rotation(yaw=start_point.rotation.yaw-0))\n",
     "\n",
     "mini.set_transform(mini_pos)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e6d1114-0b6d-40aa-808a-3495af0a1c7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
