--- a/3. basic_camera.ipynb
+++ b/3. basic_camera.ipynb
@@ -44,16 +44,27 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<carla.libcarla.World at 0x248d3532f10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# It does not necessary to load again once it download\n",
     "\n",
-    "#client.load_world('Town05')"
+    "client.load_world('Town05')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7a45ca01-f802-418b-9bc6-b14a6bdcc1a0",
    "metadata": {
     "tags": []
@@ -66,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0ecb0a71-23ba-435b-946f-42628b67dd58",
    "metadata": {
     "tags": []
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "9fa6b536-a486-446a-acbf-13fd6e0aae97",
    "metadata": {
     "tags": []
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "ed1dbb44-e935-4c03-9df3-adbe83c18bdb",
    "metadata": {
     "tags": []
@@ -156,7 +167,8 @@
     "camera_bp.set_attribute('image_size_y', '360') #360 pixels wide\n",
     "\n",
     "camera_init_trans=carla.Transform(carla.Location(z=CAMERA_POS_Z, x=CAMERA_POS_X))\n",
-    "camera = world.spawn_actor(camera_bp,camera_init_trans,attach_to=vehicle)"
+    "# camera = world.spawn_actor(camera_bp,camera_init_trans,attach_to=vehicle)\n",
+    "camera = world.spawn_actor(camera_bp,camera_init_trans)"
    ]
   },
   {
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "b2eb0a31-c752-4358-a04e-80a84d764a88",
    "metadata": {
     "tags": []
@@ -207,63 +219,65 @@
     "image_w=camera_bp.get_attribute('image_size_x').as_int()\n",
     "image_h=camera_bp.get_attribute('image_size_y').as_int()\n",
     "\n",
-    "camera_data={'image':np.zeros((image_h, image_w, 4))}\n",
+    "camera_data={'image':np.zeros((image_h, image_w, 4))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "03895cc5-c49c-48a7-a955-0cb09a093cb3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "camera.listen(lambda image:image.save_to_disk('out/%06d.png'% image.frame))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3138b542-5a7c-4b29-a845-0905642953cf",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# computer vision\n",
+    "    the way of teaching intelligence to machine and making them see things like humans. What allows computers to see and process visual data like humans, analyzing images to produce useful information\n",
     "\n",
-    "camera.listen(lambda image:camera_callback(image, camera_data))"
+    "# OpenCV\n",
+    "    vision library of programming functions mainly aimed at real time computer vision. it can be showed a digital image seen by a computer in matrix\n",
+    "    \n",
+    "# namedWindow() :\n",
+    "    is used to create a window with a suitable name and size to display images and videos on the screen.\n",
+    "    \n",
+    "# WINDOW_NORMAL : \n",
+    "    it enables you to resize the window\n",
+    "   \n",
+    "# WINDOW_AUTOSIZE: \n",
+    "    it adjusts automatically the window size to fit the displayed image (see imshow ), and you cannot change the window size manually"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4d80d5f7-6751-4842-adc3-c1b8dd3d3997",
+   "execution_count": 54,
+   "id": "5893d417-5000-4a62-81b0-5e01e6026a70",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# camera.listen(lambda image:image.save_to_disk('out/%06d.png'% image.frame))"
+    "cv2.namedWindow('RGB Camera', cv2.WINDOW_AUTOSIZE)\n",
+    "cv2.imshow('RGB Camera', camera_data['image'])\n",
+    "\n",
+    "while(True):\n",
+    "    if cv2.waitKey(1) & 0xFF==ord('x'):\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfe1747a-7c6f-4c29-968e-c6199ab426d1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# camera.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "f9a4cf71-5fc9-4f02-b45b-05a85e0aad46",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# img=camera_data['image']\n",
-    "# cv2.imshow('RGB Camera', img)\n",
-    "# cv2.waitKey(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "12e5e027-8833-49a0-b608-ed75c4006c84",
    "metadata": {
     "tags": []
@@ -276,15 +290,13 @@
     "\n",
     "# while cv2.waitKey(0)==-1:\n",
     "#     cv2.imshow('RGB Camera', camera_data['image'])\n",
-    "#     # if cv2.waitKey(1)==ord('q'):\n",
-    "#         break\n",
-    "    \n",
-    "# cv2.destroyAllWindows()"
+    "#     if cv2.waitKey(1)==ord('q'):\n",
+    "#         break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "d90515fe-46c5-4aa9-8ea3-32c57de5d778",
    "metadata": {
     "tags": []
@@ -302,11 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e07a7076-1f1d-420f-a4d6-e7c2a7119114",
-   "metadata": {},
+   "execution_count": 62,
+   "id": "4cf0bd87-3fc2-4d82-aaa1-ba2026d5898a",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
