--- a/4. sensors.ipynb
+++ b/4. sensors.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 284,
    "id": "b9966f9a-ddc1-43d8-8a7b-33c4fd61e3a8",
    "metadata": {
     "tags": []
@@ -281,29 +281,132 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d3b9c74f-a2f2-49b9-8b7b-1c920b2aa5f9",
+   "cell_type": "code",
+   "execution_count": 285,
+   "id": "c1549a08-6a6d-451c-8e8e-abb5eb649437",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# computer vision\n",
-    "    the way of teaching intelligence to machine and making them see things like humans. What allows computers to see and process visual data like humans, analyzing images to produce useful information\n",
-    "\n",
-    "# OpenCV\n",
-    "    vision library of programming functions mainly aimed at real time computer vision. it can be showed a digital image seen by a computer in matrix\n",
-    "    \n",
-    "# namedWindow() :\n",
-    "    is used to create a window with a suitable name and size to display images and videos on the screen.\n",
-    "    \n",
-    "# WINDOW_NORMAL : \n",
-    "    it enables you to resize the window\n",
-    "   \n",
-    "# WINDOW_AUTOSIZE: \n",
-    "    it adjusts automatically the window size to fit the displayed image (see imshow ), and you cannot change the window size manually"
+    "# OpenCV named window for display\n",
+    "cv2.namedWindow('All cameras', cv2.WINDOW_AUTOSIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 286,
+   "id": "9bbbf518-532e-43a5-8833-26a451626165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tile all data in one array\n",
+    "top_row = np.concatenate((sensor_data['rgb_image'], sensor_data['sem_image'], sensor_data['inst_image']), axis=1) #why concatenate by column?\n",
+    "lower_row = np.concatenate((sensor_data['depth_image'], sensor_data['dvs_image'], sensor_data['opt_image']), axis=1)\n",
+    "tiled = np.concatenate((top_row, lower_row), axis=0) #why concatenate by row?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "id": "30b7b574-1716-4dbf-aae0-12b389ec95e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display with imshow\n",
+    "cv2.imshow('All cameras',tiled)\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "id": "bd917376-7285-4c58-b812-c1b99abf2a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set sensors recording\n",
+    "camera.listen(lambda image: rgb_callback(image, sensor_data))\n",
+    "sem_camera.listen(lambda image: sem_callback(image, sensor_data))\n",
+    "inst_camera.listen(lambda image: inst_callback(image, sensor_data))\n",
+    "depth_camera.listen(lambda image: depth_callback(image, sensor_data))\n",
+    "dvs_camera.listen(lambda image: dvs_callback(image, sensor_data))\n",
+    "opt_camera.listen(lambda image: opt_callback(image, sensor_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "id": "068726bf-0b61-4b44-ad47-1c2e37d2501c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# top_row = np.concatenate((sensor_data['rgb_image'], sensor_data['sem_image'], sensor_data['inst_image']), axis=1)\n",
+    "# lower_row = np.concatenate((sensor_data['depth_image'], sensor_data['dvs_image'], sensor_data['opt_image']), axis=1)\n",
+    "# tiled = np.concatenate((top_row, lower_row), axis=0)\n",
+    "# dst1=cv2.resize(tiled, (0, 0), fx=4, fy=4, interpolation=cv2.INTER_NEAREST) \n",
+    "\n",
+    "# print(tiled[:-1])\n",
+    "# print(dst1[:-1])\n",
+    "# print(tiled[0]==dst1[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "id": "839aef9a-5e9b-4f66-be7c-ca128bf6a3f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Indefinite while loop\n",
+    "while True:\n",
+    "    \n",
+    "    # Tile camera images into one array\n",
+    "    top_row = np.concatenate((sensor_data['rgb_image'], sensor_data['sem_image'], sensor_data['inst_image']), axis=1)\n",
+    "    lower_row = np.concatenate((sensor_data['depth_image'], sensor_data['dvs_image'], sensor_data['opt_image']), axis=1)\n",
+    "    tiled = np.concatenate((top_row, lower_row), axis=0)\n",
+    "    \n",
+    "    # dst1=cv2.resize(tiled,  (0, 0), fx=4, fy=4, interpolation=cv2.INTER_NEAREST)\n",
+    "    dst4=cv2.resize(tiled, (1280, 720), fx=0.5, fy=0.5, interpolation=cv2.INTER_AREA) \n",
+    "    \n",
+    "    # cv2.imshow(\"tiled\", tiled)\n",
+    "    # cv2.imshow(\"dst1\", dst1)\n",
+    "    cv2.imshow(\"dst4\", dst4)\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "id": "14261d84-0ba0-4d4c-8966-3ea906237fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stop sensors and destroy OpenCV window\n",
+    "camera.stop()\n",
+    "sem_camera.stop()\n",
+    "inst_camera.stop()\n",
+    "depth_camera.stop()\n",
+    "dvs_camera.stop()\n",
+    "opt_camera.stop()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
    "id": "97f077a9-1f7d-43fa-8b2b-ce7fa96a5852",
    "metadata": {
     "tags": []
@@ -317,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 293,
    "id": "b3fcd06c-ba70-4125-92c8-1e2be4ec6813",
    "metadata": {
     "tags": []
@@ -344,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 294,
    "id": "ebb977e9-2168-4ab4-9ea0-e9f9c1446f92",
    "metadata": {
     "tags": []
@@ -356,7 +459,7 @@
        "-1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 295,
    "id": "be740bb5-c564-47bc-9b30-77f6b5720ddc",
    "metadata": {
     "tags": []
@@ -390,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 296,
    "id": "13dc8b57-e9e2-4008-973a-77847d791097",
    "metadata": {
     "tags": []
@@ -404,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 297,
    "id": "bccc84f8-c61b-4eb1-9b8f-3ef3776bdd60",
    "metadata": {
     "tags": []
@@ -422,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 298,
    "id": "a246a731-58c7-4d48-b98b-4b4dd45e234f",
    "metadata": {},
    "outputs": [],
@@ -441,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 299,
    "id": "4998622c-8728-487c-9170-411a4c91c46c",
    "metadata": {
     "tags": []
@@ -456,14 +559,6 @@
     "opt_camera.stop()\n",
     "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aefc910f-002f-47f7-8bc3-5050815c9433",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
