--- a/5. LIDAR and RADAR.ipynb
+++ b/5. LIDAR and RADAR.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "# Add traffic and set in motion with Traffic Manager\n",
     "\n",
-    "for i in range(30):\n",
+    "for i in range(100):\n",
     "    vehicle_bp=random.choice(bp_lib.filter('vehicle'))\n",
     "    npc=world.try_spawn_actor(vehicle_bp, random.choice(spawn_points))\n",
     "for v in world.get_actors().filter('*vehicle*'):\n",
@@ -103,17 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(256, 3)\n",
-      "[[0.         0.         1.        ]\n",
-      " [0.         0.00392157 0.99803922]\n",
-      " [0.         0.00784314 0.99607843]\n",
-      " [0.         0.01176471 0.99411765]\n",
-      " [0.         0.01568627 0.99215686]\n",
-      " [0.         0.01960784 0.99019608]\n",
-      " [0.         0.02352941 0.98823529]\n",
-      " [0.         0.02745098 0.98627451]\n",
-      " [0.         0.03137255 0.98431373]\n",
-      " [0.         0.03529412 0.98235294]]\n"
+      "(256, 3)\n"
      ]
     }
    ],
@@ -128,7 +118,7 @@
     "COOL_RANGE = np.linspace(0.0, 1.0, VIRIDIS.shape[0])\n",
     "COOL = np.array(cm.get_cmap('winter')(COOL_RANGE))\n",
     "COOL = COOL[:,:3]\n",
-    "print(COOL[0:10])"
+    "# print(COOL[0:10])"
    ]
   },
   {
@@ -351,22 +341,17 @@
      "text": [
       "C:\\Users\\USER\\miniconda3\\envs\\carla-ex7\\lib\\site-packages\\ipykernel_launcher.py:39: RuntimeWarning: divide by zero encountered in log\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "cv2.namedWindow('RGB Camera', cv2.WINDOW_AUTOSIZE)\n",
-    "cv2.imshow('RGB Camera', camera_data['image'])\n",
-    "cv2.waitKey(1)"
+    "img=camera_data['image']\n",
+    "cv2.resize(img, dsize=(1280, 720), interpolation=cv2.INTER_AREA)\n",
+    "cv2.imshow('RGB Camera', img)\n",
+    "while True:\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break\n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
@@ -391,7 +376,7 @@
     "vis = o3d.visualization.Visualizer()\n",
     "vis = o3d.visualization.Visualizer()\n",
     "vis.create_window(\n",
-    "    window_name='Carla Lidar',\n",
+    "    window_name='Lidar, Radar',\n",
     "    width=960,\n",
     "    height=540,\n",
     "    left=480,\n",
@@ -404,10 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "662b89c8-f9b7-4c8e-972d-9d1fff98e00e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\miniconda3\\envs\\carla-ex7\\lib\\site-packages\\ipykernel_launcher.py:39: RuntimeWarning: divide by zero encountered in log\n"
+     ]
+    }
+   ],
    "source": [
     "# update geometry and camera in game loop\n",
     "\n",
@@ -439,19 +432,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_25584\\2050809834.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mactor\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_actors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'*vehicle*'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mactor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mactor\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mworld\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_actors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'*sensor*'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mactor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#close displays and stop sensors\n",
     "\n",
@@ -469,37 +450,6 @@
     "for actor in world.get_actors().filter('*sensor*'):\n",
     "    actor.destroy()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "44bbb965-16a7-4ce2-ba88-446f62e44d23",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\USER\\\\workspace\\\\carla\\\\carla\\\\exercise'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fc20fde-c698-46df-8f74-6f999920a54d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
